--- a/lifetracker-ui/src/components/App/App.css
+++ b/lifetracker-ui/src/components/App/App.css
@@ -1,8 +1,7 @@
-.App {
+.app {
   display: flex;
   flex-direction: column;
   width: 100%;
   max-width: 100vw;
-  min-height: 100vh;
-  background: #f7fafc;
+  height: 100%;
 }
