--- a/lifetracker-ui/src/components/LoginPage/LoginPage.css
+++ b/lifetracker-ui/src/components/LoginPage/LoginPage.css
@@ -1,3 +1,12 @@
+.login-page {
+  background-color: #e5e5e5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  min-height: calc(100% - 50px);
+}
+
 .navbar-inputs {
   display: flex;
   flex-direction: column;
