--- a/lifetracker-ui/src/components/RegistrationPage/RegistrationPage.css
+++ b/lifetracker-ui/src/components/RegistrationPage/RegistrationPage.css
@@ -1,4 +1,20 @@
+.registration {
+  background-color: #e5e5e5;
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
 .navbar-inputs {
   display: flex;
   flex-direction: column;
+}
+
+.form {
+  width: 33%;
+  justify-content: center;
+  margin-bottom: 100px;
 }
