--- a/lifetracker-ui/src/components/Footer/Footer.css
+++ b/lifetracker-ui/src/components/Footer/Footer.css
@@ -1,6 +1,8 @@
 .footer {
   display: flex;
-  height: 100%;
+  height: auto;
   justify-content: center;
   align-items: center;
+  color: #ffffff;
+  background-color: #14213d;
 }
