--- a/lifetracker-ui/src/components/Landing/Landing.css
+++ b/lifetracker-ui/src/components/Landing/Landing.css
@@ -1,5 +1,6 @@
 .landing {
   background-color: #ffffff;
+  height: 100%;
 }
 
 .hero {
@@ -7,6 +8,7 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  height: 70%;
 }
 
 .about {
@@ -28,6 +30,7 @@
   background-color: #e5e5e5;
   display: flex;
   justify-content: space-evenly;
+  height: 30%;
 }
 
 /* Habit Card */
