--- a/lifetracker-ui/src/components/LoginPage/LoginPage.css
+++ b/lifetracker-ui/src/components/LoginPage/LoginPage.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  min-height: calc(100% - 50px);
+  height: 100%;
 }
 
 .navbar-inputs {
