--- a/lifetracker-ui/src/components/NavLinks/NavLinks.css
+++ b/lifetracker-ui/src/components/NavLinks/NavLinks.css
@@ -6,24 +6,52 @@
 }
 
 .nav-button {
-  background-color: transparent;
-  border: none;
-  font-family: "Arial", sans-serif;
-  font-size: 16px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
   border-radius: 20px;
   margin: 5px;
-}
-
-.nav-button button {
+  font-family: "Arial", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
   background-color: #fca311;
-  color: #ffffff;
-
-  width: 75px; /* Adjust the width to make the buttons wider */
-  height: 50px; /* Adjust the height to make the buttons taller */
+  color: white;
+  border: none;
+  padding: 12px 24px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  border-radius: 4px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-.nav-button:hover button {
+.nav-button:hover {
   background-color: #ff9933;
+}
+
+.logout-button {
+  border-radius: 20px;
+  margin: 5px;
+  font-family: "Arial", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-family: "Arial", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  background-color: white;
+  color: #ff9933;
+  border: none;
+  padding: 12px 24px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  border-radius: 4px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.logout-button:hover {
+  background-color: #e5e5e5;
 }
