--- a/lifetracker-ui/src/components/SleepPage/SleepPage.css
+++ b/lifetracker-ui/src/components/SleepPage/SleepPage.css
@@ -1,6 +1,53 @@
-.SleepPage .button {
+.sleep-page {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
-.SleepPage .button button {
-  flex: 1;
+
+.sleep-banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #e5e5e5;
+  height: 15%;
+  width: 100%;
+}
+
+.grid {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  height: 80%;
+  width: 100%;
+}
+
+.sleep-feed {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 5%;
+  width: 100%;
+  background-color: #14213d;
+}
+
+.create-btn {
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 12px 24px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 4px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.create-btn:hover {
+  background-color: #45a049;
 }
