--- a/lifetracker-ui/src/components/ActivityPage/ActivityPage.css
+++ b/lifetracker-ui/src/components/ActivityPage/ActivityPage.css
@@ -1,5 +1,6 @@
 .activity-page {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   height: 100%;
@@ -9,4 +10,29 @@
   width: 50%;
   display: flex;
   justify-content: space-around;
+  margin: 50px;
+}
+
+.nav-button {
+  border-radius: 20px;
+  margin: 5px;
+  font-family: "Arial", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  background-color: #fca311;
+  color: white;
+  border: none;
+  padding: 12px 24px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  border-radius: 4px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.nav-button:hover {
+  background-color: #ff9933;
 }
